Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99098

Android tst_QMediaCaptureSession test failed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.1
    • 6.3
    • Multimedia
    • None
    • Android
    • 3d6e4471b (dev), 75b9724ed (dev), e7bbba346 (6.5), 0967408dd (6.5)
    • 2022wk12FOAndroid&Automotive, 2022wk14FOAndroid&Automotive, 2022wk16FOAndroid&Automotive, 2023wk02FOQtforAndroid, 2023wk04FOQtforAndroid, 2023wk06FOQtforAndroid, 2023wk10FOQtforAndroid

    Description

      27: ********* Start testing of tst_QMediaCaptureSession *********
      27: Config: Using QtTest library 6.3.0, Qt 6.3.0 (arm64-little_endian-lp64 shared (dynamic) release build; by Clang 12.0.8 (https://android.googlesource.com/toolchain/llvm-project c935d99d7cf2016289302412d708641d52d2f7ee)), android 12.0
      27: PASS : tst_QMediaCaptureSession::initTestCase()
      27: QWARN : tst_QMediaCaptureSession::testAudioMute() : dequeueOutputBuffer() status: try again later
      27: QWARN : tst_QMediaCaptureSession::testAudioMute() : dequeueOutputBuffer() status: try again later
      27: QWARN : tst_QMediaCaptureSession::testAudioMute() : dequeueOutputBuffer() status: outputFormat changed
      27: PASS : tst_QMediaCaptureSession::testAudioMute()
      27: PASS : tst_QMediaCaptureSession::stress_test_setup_and_teardown()
      27: FAIL! : tst_QMediaCaptureSession::record_video_without_preview() 'recorder.recorderState() == QMediaRecorder::RecordingState' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(119)]
      27: FAIL! : tst_QMediaCaptureSession::record_video_without_preview() '!QTest::currentTestFailed()' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(184)]
      27: PASS : tst_QMediaCaptureSession::can_add_and_remove_AudioInput_with_and_without_AudioOutput_attached()
      27: PASS : tst_QMediaCaptureSession::can_change_AudioDevices_on_attached_AudioInput()
      27: PASS : tst_QMediaCaptureSession::can_change_AudioInput_during_recording()
      27: PASS : tst_QMediaCaptureSession::disconnects_deleted_AudioInput()
      27: PASS : tst_QMediaCaptureSession::can_move_AudioInput_between_sessions()
      27: PASS : tst_QMediaCaptureSession::disconnects_deleted_AudioOutput()
      27: PASS : tst_QMediaCaptureSession::can_move_AudioOutput_between_sessions_and_player()
      27: FAIL! : tst_QMediaCaptureSession::can_add_and_remove_Camera() 'recorder.recorderState() == QMediaRecorder::RecordingState' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(119)]
      27: FAIL! : tst_QMediaCaptureSession::can_add_and_remove_Camera() '!QTest::currentTestFailed()' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(427)]
      27: PASS : tst_QMediaCaptureSession::can_move_Camera_between_sessions()
      27: FAIL! : tst_QMediaCaptureSession::can_disconnect_Camera_when_recording() '(recorder.recorderState() == QMediaRecorder::RecordingState)' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(484)]
      27: FAIL! : tst_QMediaCaptureSession::can_add_and_remove_different_Cameras() 'recorder.recorderState() == QMediaRecorder::RecordingState' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(119)]
      27: FAIL! : tst_QMediaCaptureSession::can_add_and_remove_different_Cameras() '!QTest::currentTestFailed()' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(529)]
      27: FAIL! : tst_QMediaCaptureSession::can_change_CameraDevice_on_attached_Camera() 'recorder.recorderState() == QMediaRecorder::RecordingState' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(119)]
      27: FAIL! : tst_QMediaCaptureSession::can_change_CameraDevice_on_attached_Camera() '!QTest::currentTestFailed()' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(557)]
      27: PASS : tst_QMediaCaptureSession::can_change_VideoOutput_with_and_without_camera()
      27: FAIL! : tst_QMediaCaptureSession::can_change_VideoOutput_when_recording() '(recorder.recorderState() == QMediaRecorder::RecordingState)' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(626)]
      27: PASS : tst_QMediaCaptureSession::can_add_and_remove_recorders()
      27: PASS : tst_QMediaCaptureSession::can_move_Recorder_between_sessions()
      27: PASS : tst_QMediaCaptureSession::cannot_record_without_Camera_and_AudioInput()
      27: PASS : tst_QMediaCaptureSession::can_record_AudioInput_with_null_AudioDevice()
      27: FAIL! : tst_QMediaCaptureSession::can_record_Camera_with_null_CameraDevice() 'recorder.recorderState() == QMediaRecorder::RecordingState' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(119)]
      27: FAIL! : tst_QMediaCaptureSession::can_record_Camera_with_null_CameraDevice() '!QTest::currentTestFailed()' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(749)]
      27: PASS : tst_QMediaCaptureSession::recording_stops_when_recorder_removed()
      27: FAIL! : tst_QMediaCaptureSession::can_add_and_remove_ImageCapture() Compared values are not the same
      27: Actual (((readyForCaptureChanged.count()))): 0
      27: Expected (1) : 1
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(817)]
      27: PASS : tst_QMediaCaptureSession::can_move_ImageCapture_between_sessions()
      27: FAIL! : tst_QMediaCaptureSession::capture_is_not_available_when_Camera_is_null() Compared values are not the same
      27: Actual (((readyForCaptureChanged.count()))): 0
      27: Expected (1) : 1
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(885)]
      27: FAIL! : tst_QMediaCaptureSession::can_add_ImageCapture_and_capture_during_recording() '(recorder.recorderState() == QMediaRecorder::RecordingState)' returned FALSE. ()
      27: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession.cpp(927)]
      27: PASS : tst_QMediaCaptureSession::cleanupTestCase()
      27: Totals: 19 passed, 15 failed, 0 skipped, 0 blacklisted, 124869ms
      27: ********* Finished testing of tst_QMediaCaptureSession *********

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-99098
          # Subject Branch Project Status CR V

          Activity

            People

              bartlomiejmoskal Bartlomiej Moskal
              samuelmira Samuel Mira
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes